--- a/backend/package.json
+++ b/backend/package.json
@@ -18,21 +18,24 @@
   "license": "MIT",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
+    "@distube/ytdl-core": "^4.16.4",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@google-cloud/dialogflow": "^4.7.0",
+    "@google-cloud/dialogflow": "^6.14.0",
     "@hapi/boom": "^9.1.4",
     "@sentry/node": "^5.29.2",
     "@thream/socketio-jwt": "^3.0.0",
     "@types/lodash": "^4.14.182",
     "@types/pino": "^6.3.4",
     "@whiskeysockets/baileys": "github:zennn08/Baileys#profile-picture-url",
+    "actions-on-google": "^2.4.1",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "bull": "^4.8.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
-    "dialogflow-fulfillment": "^0.6.1",
+    "dialogflow": "^1.2.0",
+    "dialogflow-fulfillment": "^0.5.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
