Refactor: Remove console.log statements across various components and services
- Commented out console.log statements in UserModal, VcardPreview, useSocket, MainListItems, InfoAdmin, InternalChat, Queues, SendMassMessage, SettingMessage, ShippingReport to clean up the code and reduce unnecessary logging.
- Added new API-related columns to the database migrations for queues and tickets.
- Implemented iniciarAPI function in ApiService to handle API interactions for tickets and queues.
- Introduced messageCache utility to manage received messages in memory.

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@adiwajshing/baileys": "^5.0.0",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@distube/ytdl-core": "^4.16.4",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
@@ -26,9 +27,10 @@
     "@thream/socketio-jwt": "^3.0.0",
     "@types/lodash": "^4.14.182",
     "@types/pino": "^6.3.4",
-    "@whiskeysockets/baileys": "github:zennn08/Baileys#profile-picture-url",
+    "@whiskeysockets/baileys": "^6.7.18",
     "actions-on-google": "^2.4.1",
     "axios": "^0.26.1",
+    "baileys": "github:zennn08/Baileys#profile-picture-url",
     "bcryptjs": "^2.4.3",
     "bull": "^4.8.2",
     "cookie-parser": "^1.4.5",
