refactor: atualiza nomes de tabelas e colunas para seguir convenções de nomenclatura e ajusta importações

--- a/backend/.env
+++ b/backend/.env
@@ -10,9 +10,10 @@ VIEW_MSG_OTHERS_NUMBER=2
 VIEW_MSG_OTHERS_NUMBER_QUEUE=1 
 VIEW_MSG_OTHERS_NUMBER_CLOSED=1 
 
-DB_DIALECT=mysql
+DB_DIALECT=postgres
+DB_PORT=5432
 DB_HOST=localhost
-DB_USER=root
+DB_USER=postgres
 DB_PASS=
 DB_NAME=whats
 
